# multithreading_project

./: CMakeLists.txt  main.cpp
todo/: todo.txt
utils/: Client.cpp  Client.h  Destination.cpp  Destination.h  Disposer.cpp  Disposer.h
